tests/NormalTests/paczka1/small_fuzzy/96610749.err
Error in line 5: a4ne A815 77,2
Error in line 6: a4ne A1 83,7
Error in line 9: 2qV A858 9,3
Error in line 13: 2qV A1 90,0
